[project]
name = "Kraken"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "Kraken. A sensor aggregation daemon."
readme = "README.md"
license = { text="GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Home Automation",
]
keywords = ["IoT", "PID", "PID controller",]
dependencies = [
    "aiostream ~= 0.4.4",
    "labnode_async ~= 0.15.2",
    "python-decouple ~= 3.5",
    "tinkerforge_async ~= 1.5.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend"
"Bug Tracker" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend/issues"
"Download" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend/releases"

[project.optional-dependencies]
dev = [
    "black", "build", "isort", "mypy", "pre-commit", "pylint", "types-simplejson", "pylint_pydantic"
]

test = [
    "mypy", "pylint", "pylint_pydantic", "pytest"
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.pylint.'MAIN']
load-plugins = "pylint_pydantic"
init-hook='import sys; sys.path.append(".")'

[tool.pylint.'MISCELLANEOUS']
notes = ["FIXME",]

[tool.mypy]
enable_incomplete_feature = "Unpack"

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    # conftest.py reorders tests moving slow ones to the end of the list
    "slow",
]

[build-system]
requires = [
    "setuptools>=64.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}
