[project]
name = "Kraken"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "Kraken. A sensor aggregation daemon."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE",
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Home Automation",
]
keywords = ["IoT", "PID", "PID controller",]
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend"
"Bug Tracker" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend/issues"
"Download" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend/releases"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.pylint.'MAIN']
load-plugins = "pylint_pydantic"
init-hook='import sys; sys.path.append(".")'

[tool.pylint.'MISCELLANEOUS']
notes = ["FIXME",]

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    # conftest.py reorders tests moving slow ones to the end of the list
    "slow",
]

[build-system]
requires = [
    "setuptools>=82.0.1",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black~=26.3.1",
    "build~=1.4.4",
    "isort~=8.0.1",
    "pre_commit~=4.6.0",
    "types-simplejson~=3.20.0.20260408",
    {include-group = "lint"},
]
lint = [
    "mypy~=1.20.2",
    "pylint~=4.0.5",
    "pylint-pydantic~=0.4.1",
]
test = [
    "pytest~=9.0.3",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = {attr = "_version.__version__"}
